--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - 3 Col Portfolio (https://startbootstrap.com/template-overviews/3-col-portfolio)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-3-col-portfolio/blob/master/LICENSE)
- */
-
 body {
   padding-top: 54px;
 }
@@ -14,7 +8,13 @@ body {
     padding-top: 56px;
   }
 }
+.card-img-top{
+    padding-top:5%;
+    width:40%;
+    margin-left:25%;
+    display: block;
 
+}
 .center{
     margin: auto;
     padding: 20px;
